[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.3.0", features = ["bench"] }
fnv = "1.0.7"
itertools = "0.10.3"
parse-display = "0.5.3"
rayon = "1.5.1"
termcolor = "1.1.2"
